# jsonrpc-proxy

./: .travis.yml  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: lib.rs
ethereum-proxy/: Cargo.toml
ethereum-proxy/plugins/accounts/: Cargo.toml
ethereum-proxy/plugins/accounts/src/: config.rs  lib.rs
ethereum-proxy/plugins/accounts/transaction/: Cargo.toml
ethereum-proxy/plugins/accounts/transaction/src/: lib.rs
ethereum-proxy/src/: cli.yml  main.rs
examples/: cache.json  permissions.json  upstream.json
generic-proxy/: Cargo.toml
generic-proxy/src/: cli.yml  lib.rs  main.rs
plugins/ipc-upstream/: Cargo.toml
plugins/ipc-upstream/src/: config.rs  lib.rs
plugins/permissioning/: Cargo.toml
plugins/permissioning/src/: config.rs  lib.rs
plugins/simple-cache/: Cargo.toml
plugins/simple-cache/src/: config.rs  lib.rs
plugins/upstream/: Cargo.toml
plugins/upstream/src/: config.rs  helpers.rs  lib.rs  shared.rs
plugins/ws-upstream/: Cargo.toml
plugins/ws-upstream/src/: config.rs  lib.rs  params.rs
proxy/: Cargo.toml
proxy/cli/: Cargo.toml
proxy/cli-params/: Cargo.toml
proxy/cli-params/src/: lib.rs
proxy/cli/src/: lib.rs
proxy/src/: caching.rs  lib.rs
proxy/src/passthrough/: mod.rs  ws.rs
proxy/transports/: Cargo.toml
proxy/transports/src/: http.rs  ipc.rs  lib.rs  tcp.rs  ws.rs
rpc-proxy/: Cargo.toml
rpc-proxy/src/: main.rs
substrate-proxy/: Cargo.toml
substrate-proxy/src/: cli.yml  main.rs
transports/: Cargo.toml
transports/src/: lib.rs
