[package]
name = "ethereum-proxy"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
cli = { path = "../proxy/cli" }
cli-params = { path = "../proxy/cli-params" }
ethereum-proxy-accounts = { path = "./plugins/accounts" }
jsonrpc-core = "15.1"
log = "0.4"
rpc-proxy = { path = "../generic-proxy" }
simple-cache = { path = "../plugins/simple-cache" }
upstream = { path = "../plugins/upstream" }
