[package]
name = "rpc-proxy"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
cli = { path = "../proxy/cli" }
env_logger = "0.9"
jsonrpc-core = "18.0"
jsonrpc-pubsub = "18.0"
tokio = { version = "1.13", features = ["full"] }
permissioning = { path = "../plugins/permissioning" }
simple-cache = { path = "../plugins/simple-cache" }
transports = { path = "../proxy/transports" }
upstream = { path = "../plugins/upstream" }
ws-upstream = { path = "../plugins/ws-upstream" }

[[bin]]
name = "rpc-proxy"
path = "bin/rpc-proxy.rs"

[lib]
name = "generic_proxy"
path = "src/lib.rs"
