[package]
name = "substrate-proxy"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
simple-cache = { path = "../plugins/simple-cache" }
upstream = { path = "../plugins/upstream" }
rpc-proxy = { path = "../generic-proxy" }
