[package]
name = "substrate-proxy"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
rpc-proxy = { path = "../generic-proxy" }
simple-cache = { path = "../plugins/simple-cache" }
tokio = { version = "1.4", features = ["macros"] }
upstream = { path = "../plugins/upstream" }
