[package]
name = "simple-cache"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
cli-params = { path = "../../proxy/cli-params" }
fnv = "1.0"
jsonrpc-core = "15.1"
parking_lot = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
twox-hash = "1.6"
