[package]
name = "upstream"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

[dependencies]
cli-params = { path = "../../proxy/cli-params" }
fnv = "1.0"
jsonrpc-core = "14.2"
jsonrpc-pubsub = "14.2"
log = "0.4"
parking_lot = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = "0.1"
twox-hash = "1.5"
websocket = { version = "0.24", default-features = false, features = ["async"] }
