[package]
name = "upstream"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
cli-params = { path = "../../proxy/cli-params" }
fnv = "1.0"
jsonrpc-core = "17.1"
jsonrpc-pubsub = "17.1"
log = "0.4"
parking_lot = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
twox-hash = "1.6"
websocket = { version = "0.26", default-features = false, features = ["async"] }
