[package]
name = "ws-upstream"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

[dependencies]
cli-params = { path = "../../proxy/cli-params" }
jsonrpc-core = "14.1"
jsonrpc-pubsub = "14.1"
log = "0.4"
serde_json = "1.0"
tokio = "0.2"
upstream = { path = "../upstream" }
websocket = { version = "0.24", default-features = false, features = ["async"] }
