[package]
name = "ws-upstream"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
cli-params = { path = "../../proxy/cli-params" }
jsonrpc-core = "16.0"
jsonrpc-pubsub = "16.0"
log = "0.4"
serde_json = "1.0"
tokio = "0.1"
upstream = { path = "../upstream" }
websocket = { version = "0.26", default-features = false, features = ["async"] }
