[package]
name = "ws-upstream"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
cli-params = { path = "../../proxy/cli-params" }
futures01 = { package = "futures", version = "0.1" }
jsonrpc-core = "16.0"
jsonrpc-pubsub = "17.0"
log = "0.4"
serde_json = "1.0"
upstream = { path = "../upstream" }
url = "1.0"
websocket = { version = "0.26", default-features = false, features = ["async"] }
