[package]
name = "transports"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
cli-params = { path = "../cli-params" }
# TODO [ToDr] feature-gate transports.
jsonrpc-core = "14.2"
jsonrpc-http-server = "14.2"
jsonrpc-ipc-server = "14.2"
jsonrpc-pubsub = "15.0"
jsonrpc-tcp-server = "14.2"
jsonrpc-ws-server = "14.2"
log = "0.4"
