[package]
name = "transports"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
cli-params = { path = "../cli-params" }
# TODO [ToDr] feature-gate transports.
jsonrpc-core = "15.1"
jsonrpc-http-server = "15.1"
jsonrpc-ipc-server = "16.0"
jsonrpc-pubsub = "15.1"
jsonrpc-tcp-server = "15.1"
jsonrpc-ws-server = "15.1"
log = "0.4"
