[package]
name = "transports"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
cli-params = { path = "../cli-params" }
# TODO [ToDr] feature-gate transports.
jsonrpc-core = "16.0"
jsonrpc-http-server = "16.0"
jsonrpc-ipc-server = "17.0"
jsonrpc-pubsub = "17.0"
jsonrpc-tcp-server = "16.0"
jsonrpc-ws-server = "16.0"
log = "0.4"
