[package]
name = "ethereum-proxy-accounts"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
edition = "2018"

[dependencies]
cli-params = { path = "../../../proxy/cli-params" }
ethsign = { git = "https://github.com/tomusdrw/ethsign", branch = "td-clone" }
#ethsign = "0.7"
jsonrpc-core = "13.1"
serde_json = "1.0"
