[package]
name = "ethereum-proxy-accounts"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
edition = "2018"

[dependencies]
cli-params = { path = "../../../proxy/cli-params" }
ethsign = "0.7"
ethereum-transaction = { path = "./transaction" }
jsonrpc-core = "14.0"
log="0.4"
serde_json = "1.0"
