[package]
name = "ethereum-transaction"
description = "A set of primitives to compose ethereum transactions."
repository = "https://github.com/tomusdrw/jsonrpc-proxy"
version = "0.4.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
ethereum-types = "0.9"
impl-serde = { version = "0.1" }
log = "0.4"
rlp = "0.4"
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = "1.5"
