[package]
name = "ethereum-transaction"
description = "A set of primitives to compose ethereum transactions."
repository = "https://github.com/tomusdrw/jsonrpc-proxy"
version = "0.6.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
ethereum-types = "0.10"
impl-serde = { version = "0.3" }
log = "0.4"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = "2.0"
